<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>pro.api4</groupId>
        <artifactId>jsonapi4j</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>jsonapi4j-rest-quarkus-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>JsonApi4j - Quarkus Extension - Parent</name>
    <description>Native Quarkus extension for JsonApi4j framework - parent module</description>

    <url>https://api4.pro</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>MoonWorm</id>
            <name>Aliaksei Taliuk</name>
            <email>aliaksei.taliuk@gmail.com</email>
            <url>https://github.com/MoonWorm</url>
            <roles>
                <role>Author</role>
                <role>Project Maintainer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/MoonWorm/jsonapi4j.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/MoonWorm/jsonapi4j.git</developerConnection>
        <url>https://github.com/MoonWorm/jsonapi4j</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>deployment</module>
        <module>runtime</module>
    </modules>

    <properties>
        <compiler-plugin.version>3.16.0</compiler-plugin.version>
        <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.20.6</quarkus.version>
        <surefire-plugin.version>3.6.0</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- JUnit.
                 MUST stay declared before quarkus-bom: when two imported BOMs manage the same artifact,
                 the first import wins. quarkus-bom ships JUnit Platform 6.x, while the root pom pins
                 Jupiter to ${junit-jupiter-api.version}; that combination fails at test discovery with
                 NoSuchMethodError on org.junit.platform.commons.util.ReflectionUtils.returnsVoid. -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter-api.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Quarkus -->
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-arc-deployment</artifactId>
                <version>${quarkus.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-undertow-deployment</artifactId>
                <version>${quarkus.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-arc</artifactId>
                <version>${quarkus.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-undertow</artifactId>
                <version>${quarkus.version}</version>
            </dependency>

            <!-- jsonapi4j -->
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-rest</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-rest-quarkus</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-ac-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-oas-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-sf-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>pro.api4</groupId>
                <artifactId>jsonapi4j-cd-plugin</artifactId>
                <version>${revision}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                            <maven.repo>${settings.localRepository}</maven.repo>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${failsafe-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                            <maven.repo>${settings.localRepository}</maven.repo>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
